# graphics-project

./: .gitignore  Cargo.toml  Makefile  README.md  report.md  sources.bib
res/models/: CashRegister_01_2k.mtl  GothicCabinet_01_1k.mtl  crt.mtl  cube.mtl  goose.mtl  modern_ceiling_lamp_01_2k.mtl  round_wooden_table_01_2k.mtl  sofa_03_1k.mtl  sofa_03_2k.mtl  vintage_cabinet_01_2k.mtl  vintage_wooden_drawer_01_2k.mtl
res/shaders/: bloom.frag  dots.frag  gyroid.frag  landscape.frag  post.frag  post.vert  ripples.frag  screen.vert  shadow.frag  simple.frag  simple.vert  single_color.frag  single_color.vert  smooth.frag  smooth2.frag  spotlights.frag  sunrise.frag  whateverwave.frag  world.frag  world.vert
res/textures/: sofa_03_nor_gl_1k.exr
src/: main.rs  shader.rs
src/scene/: camera.rs  graph.rs  mod.rs  setup.rs  texture.rs  vao.rs
