[package]
name = "grafikkprosjekt"
version = "0.1.0"
edition = "2018"
authors = ["Tore Bergebakken"]
description = "Project in TDT4230"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.11.2"
glutin = "0.27.0"
nalgebra-glm = "0.16.0"
tobj = "3.2.1"
